alignment fixes

--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -28,6 +28,8 @@
       flex-direction: column;
       align-items: center;
       margin-top: 100px;
+      padding-left: 20px;
+      padding-right: 20px;
 
       .mp-about_bio {
         display: flex;
