--- a/src/components/Experience/index.scss
+++ b/src/components/Experience/index.scss
@@ -14,6 +14,7 @@
   }
 
   .mp-experience {
+    width: 80%;
     padding-top: 100px;
     display: flex;
     flex-direction: column;
@@ -21,6 +22,7 @@
     align-items: center;
 
     .mp-experience_section {
+      width: 100%;
       padding-top: 40px;
       display: flex;
       flex-direction: column;
