--- a/src/components/Projects/index.scss
+++ b/src/components/Projects/index.scss
@@ -24,6 +24,7 @@
     }
 
     .mp-projects_section {
+      width:100%;
       padding-top: 50px;
       display: flex;
       flex-direction: column;
